Fixed the title on mobile.
Changed the title font size on tiny devices.

--- a/style.css
+++ b/style.css
@@ -50,11 +50,12 @@ a:visited {
     color: #2721d8;
     background-color: transparent;
     text-decoration: none;
- }
+}
+
  a:active {
     color: #216bd8;
     background-color: transparent;
- }
+}
 
 .gallery {
     display: flex;
@@ -124,6 +125,13 @@ button {
 @media (max-width: 1200px) {
     .content {
         width: 45%;
+    }
+}
+
+@media screen and (max-width:900px) {
+
+    .title {
+        font-size: 11vw;
     }
 }
 
